// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@keen/charts <PieChart /> - utils should calculate position for labels placed "outer" of slice 1`] = `
Array [
  Object {
    "index": "4",
    "label": "14.2%",
    "labelPosition": Array [
      -34.501855139563546,
      -72.1777111851614,
    ],
    "path": "M-30.987399294969656,-25.29389422240304A40,40,0,0,1,-0.2236058660561739,-39.99937500032551L-0.22360586605615085,-19.99874997135234A20,20,0,0,0,-15.422757044954187,-12.733364250358816Z",
    "pathActive": "M-46.493226654345136,-37.92597889663089A60,60,0,0,1,-0.31622644840281067,-59.99916666782407L-0.3162264484027946,-19.997499864566336A20,20,0,0,0,-15.36361783986544,-12.80465723362279Z",
  },
  Object {
    "index": "2",
    "label": "20.6%",
    "labelPosition": Array [
      -44.36132046019484,
      66.57381802952193,
    ],
    "path": "M2.2074716889161894,39.93904191067474A40,40,0,0,1,-37.70994942812798,13.340154201808556L-18.817392212389276,6.775378242217287A20,20,0,0,0,0.99208255813902,19.975379150289896Z",
    "pathActive": "M3.330360763998235,59.90750117624354A60,60,0,0,1,-56.5713187334494,19.992145876780633L-18.785810645042357,6.862457169892807A20,20,0,0,0,0.8995571778492524,19.97975968033099Z",
  },
  Object {
    "index": "0",
    "label": "25.2%",
    "labelPosition": Array [
      56.85445267025227,
      -56.28117990559584,
    ],
    "path": "M0.22360586605615126,-39.99937500032551A40,40,0,0,1,39.999587043065965,0.18175913784315811L19.999989051384123,-0.020927123910416574A20,20,0,0,0,0.22360586605615285,-19.99874997135234Z",
    "pathActive": "M0.31622644840280334,-59.99916666782407A60,60,0,0,1,59.99929033271326,0.2918211280588869L19.99967762543816,-0.11355561874374182A20,20,0,0,0,0.3162264484027922,-19.997499864566336Z",
  },
  Object {
    "index": "3",
    "label": "16.1%",
    "labelPosition": Array [
      -78.81570540969109,
      -13.714393197396307,
    ],
    "path": "M-37.85673708219204,12.91771874170459A40,40,0,0,1,-31.26825133618883,-24.945870567629534L-15.703609086173367,-12.385340595585301A20,20,0,0,0,-18.964179866453346,6.352942782113306Z",
    "pathActive": "M-56.77890782461574,19.394731919874257A60,60,0,0,1,-46.89041142005747,-37.43379912402353L-15.760802605577762,-12.312477461015444A20,20,0,0,0,-18.99339973620869,6.265043212986452Z",
  },
  Object {
    "index": "1",
    "label": "23.9%",
    "labelPosition": Array [
      57.98342297832959,
      55.11735352605493,
    ],
    "path": "M39.99505500098913,0.6289479055168361A40,40,0,0,1,2.6538569488490307,39.91186594604474L1.4384678180718669,19.948203185659892A20,20,0,0,0,19.995457009307295,0.4262616437632615Z",
    "pathActive": "M59.992881057342956,0.9242415482439135A60,60,0,0,1,3.961644852638723,59.86906855849322L1.530841266489723,19.94132706258067A20,20,0,0,0,19.993268350067865,0.5188648014412846Z",
  },
]
`;

exports[`@keen/charts <PieChart /> - utils should calculate properties for each arc 1`] = `
Array [
  Object {
    "index": "4",
    "label": "14.2%",
    "labelPosition": Array [
      -14.375772974818144,
      -30.074046327150587,
    ],
    "path": "M-30.987399294969656,-25.29389422240304A40,40,0,0,1,-0.2236058660561739,-39.99937500032551L-0.22360586605615085,-19.99874997135234A20,20,0,0,0,-15.422757044954187,-12.733364250358816Z",
    "pathActive": "M-46.493226654345136,-37.92597889663089A60,60,0,0,1,-0.31622644840281067,-59.99916666782407L-0.3162264484027946,-19.997499864566336A20,20,0,0,0,-15.36361783986544,-12.80465723362279Z",
  },
  Object {
    "index": "2",
    "label": "20.6%",
    "labelPosition": Array [
      -18.483883525081186,
      27.739090845634138,
    ],
    "path": "M2.2074716889161894,39.93904191067474A40,40,0,0,1,-37.70994942812798,13.340154201808556L-18.817392212389276,6.775378242217287A20,20,0,0,0,0.99208255813902,19.975379150289896Z",
    "pathActive": "M3.330360763998235,59.90750117624354A60,60,0,0,1,-56.5713187334494,19.992145876780633L-18.785810645042357,6.862457169892807A20,20,0,0,0,0.8995571778492524,19.97975968033099Z",
  },
  Object {
    "index": "0",
    "label": "25.2%",
    "labelPosition": Array [
      23.689355279271783,
      -23.4504916273316,
    ],
    "path": "M0.22360586605615126,-39.99937500032551A40,40,0,0,1,39.999587043065965,0.18175913784315811L19.999989051384123,-0.020927123910416574A20,20,0,0,0,0.22360586605615285,-19.99874997135234Z",
    "pathActive": "M0.31622644840280334,-59.99916666782407A60,60,0,0,1,59.99929033271326,0.2918211280588869L19.99967762543816,-0.11355561874374182A20,20,0,0,0,0.3162264484027922,-19.997499864566336Z",
  },
  Object {
    "index": "3",
    "label": "16.1%",
    "labelPosition": Array [
      -32.83987725403796,
      -5.714330498915128,
    ],
    "path": "M-37.85673708219204,12.91771874170459A40,40,0,0,1,-31.26825133618883,-24.945870567629534L-15.703609086173367,-12.385340595585301A20,20,0,0,0,-18.964179866453346,6.352942782113306Z",
    "pathActive": "M-56.77890782461574,19.394731919874257A60,60,0,0,1,-46.89041142005747,-37.43379912402353L-15.760802605577762,-12.312477461015444A20,20,0,0,0,-18.99339973620869,6.265043212986452Z",
  },
  Object {
    "index": "1",
    "label": "23.9%",
    "labelPosition": Array [
      24.159759574303997,
      22.965563969189557,
    ],
    "path": "M39.99505500098913,0.6289479055168361A40,40,0,0,1,2.6538569488490307,39.91186594604474L1.4384678180718669,19.948203185659892A20,20,0,0,0,19.995457009307295,0.4262616437632615Z",
    "pathActive": "M59.992881057342956,0.9242415482439135A60,60,0,0,1,3.961644852638723,59.86906855849322L1.530841266489723,19.94132706258067A20,20,0,0,0,19.993268350067865,0.5188648014412846Z",
  },
]
`;
